rework question and td components

--- a/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
+++ b/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
@@ -1,8 +1,55 @@
 <aura:component
   implements="forceCommunity:availableForAllPageTypes"
-  controller="LadaCaseController"
+  controller="LadaCarController"
 >
-  <aura:attribute
+  <aura:attribute name="options" type="Product2[]" access="PRIVATE"/>
+  <aura:attribute name="selectedValue" type="String" access="PRIVATE"/>
+  <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
+
+<form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
+
+  <input type="hidden" name="orgid" value="00D5j00000AHFVr"/>
+  <input type="hidden" name="retURL" value="https://slava-nomercy-developer-edition.ap27.force.com/lada"/>
+  
+  <p><label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /></p>
+  
+  <p><label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /></p>
+  
+  <p><label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /></p>
+  
+  <lightning:select name="carId" label="Product Interest:" aura:id="carId" value="{!v.selectedValue}">
+      <aura:iteration items="{!v.options}" var="option">
+          <option text="{!option.Name}" />
+      </aura:iteration>
+    </lightning:select><br/>
+  
+  <label for="type">Type</label><select  id="type" name="type"><option value="">--None--</option><option value="Mechanical">Mechanical</option>
+  <option value="Electrical">Electrical</option>
+  <option value="Electronic">Electronic</option>
+  <option value="Structural">Structural</option>
+  <option value="Other">Other</option>
+  </select><br/>
+  
+  <label for="reason">Case Reason</label><select  id="reason" name="reason"><option value="">--None--</option><option value="Installation">Installation</option>
+  <option value="Equipment Complexity">Equipment Complexity</option>
+  <option value="Performance">Performance</option>
+  <option value="Breakdown">Breakdown</option>
+  <option value="Equipment Design">Equipment Design</option>
+  <option value="Feedback">Feedback</option>
+  <option value="Other">Other</option>
+  </select><br/>
+  
+  <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br/>
+  
+  <label for="description">Description</label><textarea name="description"></textarea><br/>
+  
+  <input type="hidden"  id="external" name="external" value="1" /><br/>
+  
+  <input type="submit" name="submit"/>
+  
+  </form>
+
+<!--<aura:attribute
     name="newCase"
     type="Case"
     default="{ 'sobjectType': 'Case',
@@ -45,7 +92,7 @@
             >
               <legend
                 id="newCampaingForm"
-                class="slds-text-heading--small slds-p-vertical--medium"
+                class="slds-text-heading-small slds-p-vertical-medium"
               >
                 Have a Question?
               </legend>
@@ -102,5 +149,5 @@
       </section>
       <div class="slds-backdrop slds-backdrop_open"></div>
     </aura:if>
-  </div>
+  </div>-->
 </aura:component>
