--- a/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
+++ b/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
@@ -6,6 +6,8 @@
   <aura:attribute name="selectedValue" type="String" access="PRIVATE"/>
   <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 
+  <h1>Question Form</h1>
+
 <form action="https://webto.salesforce.com/servlet/servlet.WebToCase?encoding=UTF-8" method="POST">
 
   <input type="hidden" name="orgid" value="00D5j00000AHFVr"/>
