--- a/final/force-app/main/default/aura/testDrive/testDrive.css
+++ b/final/force-app/main/default/aura/testDrive/testDrive.css
@@ -30,6 +30,7 @@ form.cTestDrive.cMain p input[type=text] {
   width: max-content;
   color: black;
   font-size: 16px;
+  border-radius: 3px;
   border: 1px solid black;
   display: table;
   padding: 4px;
@@ -51,7 +52,8 @@ form.cTestDrive.cMain div select {
   color: black;
   width: fit-content;
   font-size: 16px;
-  margin-left: 15px;
+  margin-left: 20px;
+  border: 1px solid;
 }
 
 form.cTestDrive.cMain div div {
