--- a/final/force-app/main/default/aura/productList/productList.cmp
+++ b/final/force-app/main/default/aura/productList/productList.cmp
@@ -1,5 +1,5 @@
 <aura:component
-  controller="CarListController"
+  controller="LadaCarController"
   implements="forceCommunity:availableForAllPageTypes"
 >
   <aura:attribute name="cars" type="Product2[]" />
