--- a/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
+++ b/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
@@ -15,7 +15,7 @@
   
   <p><label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /></p>
   
-  <p><label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /></p>
+  <p><label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" required="true"/></p>
   
   <p><label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /></p>
   
@@ -41,7 +41,7 @@
   <option value="Other">Other</option>
   </select><br/>
   
-  <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /><br/>
+  <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" required="true"/><br/>
   
   <label for="description">Description</label><textarea name="description"></textarea><br/>
   
