--- a/final/force-app/main/default/aura/testDrive/testDrive.cmp
+++ b/final/force-app/main/default/aura/testDrive/testDrive.cmp
@@ -2,7 +2,7 @@
   implements="forceCommunity:availableForAllPageTypes"
   controller="LadaCarController"
 >
-  <aura:attribute name="options" type="Product2[]" access="PRIVATE"/>
+  <aura:attribute name="options" type="PricebookEntry[]" access="PRIVATE"/>
   <aura:attribute name="selectedValue" type="String" access="PRIVATE"/>
   <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
   <!--<aura:attribute name="isModalOpen" type="boolean" default="false" />-->
@@ -21,7 +21,7 @@
     
     <lightning:select name="carId" label="Product Interest:" aura:id="carId" value="{!v.selectedValue}">
       <aura:iteration items="{!v.options}" var="option">
-          <option text="{!option.Name}" />
+          <option text="{!option.Product2.Name}" />
       </aura:iteration>
     </lightning:select><br/>
     
