--- a/final/force-app/main/default/aura/footer/footer.css
+++ b/final/force-app/main/default/aura/footer/footer.css
@@ -1,7 +1,12 @@
 .THIS {
+  background: black;
+  font-family: "Varela", sans-serif;
 }
 
+
+
 div.cFooter.cMain a.refStyle {
+  position: relative;
   border: none;
   outline: none;
   text-decoration: none;
