--- a/final/force-app/main/default/aura/header/header.cmp
+++ b/final/force-app/main/default/aura/header/header.cmp
@@ -1,5 +1,7 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes">
   <aura:registerEvent name="cmpEvent" type="c:ComponentEvent" />
+  <aura:attribute name="currentPage" type="String" default="home" />
+  <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
   <lightning:layout
     pullToBoundary="medium"
     class="slds-page-header slds-page-header--object-home"
@@ -15,27 +17,27 @@
       </div>
     </lightning:layout>
     <lightning:layoutItem padding="around-small">
-      <lightning:button label="Home" title="Home" onclick="{! c.home }" />
+      <lightning:button aura:id="home" label="Home" title="Home" onclick="{! c.home }" />
     </lightning:layoutItem>
     <lightning:layoutItem padding="around-small">
-      <lightning:button label="Cars" title="Cars" onclick="{! c.cars }" />
+      <lightning:button aura:id="cars" label="Cars" title="Cars" onclick="{! c.cars }" />
     </lightning:layoutItem>
     <lightning:layoutItem padding="around-small">
-      <lightning:button
+      <lightning:button aura:id="services"
         label="Services"
         title="Services"
         onclick="{! c.services }"
       />
     </lightning:layoutItem>
     <lightning:layoutItem padding="around-small">
-      <lightning:button
+      <lightning:button aura:id="question"
         label="Question"
         title="question"
         onclick="{! c.question }"
       />
     </lightning:layoutItem>
     <lightning:layoutItem padding="around-small">
-      <lightning:button
+      <lightning:button aura:id="testDrive"
         label="Test-Drive"
         title="testDrive"
         onclick="{! c.testDrive }"
