--- a/final/force-app/main/default/aura/product/product.css
+++ b/final/force-app/main/default/aura/product/product.css
@@ -1,6 +1,3 @@
-.THIS {
-}
-
 .THIS.item {
   margin: 5px;
   padding: 20px;
@@ -8,16 +5,23 @@
 }
 
 div.slds-region_narrow.cProduct {
-  display: inline-block;
-  min-width: 300px;
-  max-width: 500px;
+  display: flex;
+  min-width: 336px;
+  max-width: 515px;
+  /* width: calc(50% - 40px); */
+  flex-wrap: wrap;
+  margin: 5px 10px 15px 10px;
+  justify-content: space-between;
 }
 
 div.slds-region_narrow.cProduct p {
-  margin: 1em 0 0.5em 0;
+  margin: 1em 0.5em 0.5em 0;
   color: #343434;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  font-family: "Orienta", sans-serif;
+  font-family: "Orienta",sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: left;
 }
