--- a/final/force-app/main/default/aura/questionComponent/questionComponent.css
+++ b/final/force-app/main/default/aura/questionComponent/questionComponent.css
@@ -1,11 +1,8 @@
-.THIS {
-}
-
 form.cQuestionComponent.cMain {
   align-self: center;
   align-items: center;
-  padding: 100px 150px 100px;
-    
+  padding: 15px 150px 100px;
+  background-image: linear-gradient(to bottom, white, rgb(240, 240, 240));   
 }
 
 h1.cQuestionComponent.cMain {
@@ -14,37 +11,87 @@ h1.cQuestionComponent.cMain {
   font-size: 36px;
 }
 
+span.line.cQuestionComponent.cMain {
+  width: 75%;
+  height: 2px;
+  background-color: #000000;
+  display: block;
+  margin: 2% auto;
+}
+
+ form.cQuestionComponent.cMain div.slds-form-element
+ div.slds-form-element__control.slds-grow div.slds-select_container
+  select.slds-select {
+  width: 217px;
+  border-radius: 5px;
+} 
+
+form.cQuestionComponent.cMain b,
+  form.cQuestionComponent.cMain p b {
+  text-decoration: none;
+  font-size: 17px;
+  align-self: flex-end;
+  color: red;
+}
+
 form.cQuestionComponent.cMain p {
   width: 100%;
   padding: 15px 5px 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
 }
 
 form.cQuestionComponent.cMain p label {
   color: black;
   font-size: 18px;
-  margin-left: 25px;
+  margin-left: 4px;
+  display: inline-block;
+  width: 155px;
+  font-weight: bold;
 }
 
 form.cQuestionComponent.cMain p input[type=text] {
   margin-left: 20px;
-  width: max-content;
+  width: 217px;
   color: black;
   font-size: 16px;
   border: 1px solid black;
+  border-radius: 5px;
   display: table;
   padding: 4px;
+  height: 32px;
+  -webkit-transition: width .35s ease-in-out;
+  transition: width .35s ease-in-out;
 }
+
+form.cQuestionComponent.cMain p input[type=text]:focus{
+  width: 400px;
+} 
+
+form.cQuestionComponent.cMain p input.incorrectInput {
+  border: 2px solid red;
+}
+
 
 form.cQuestionComponent.cMain div {
   width: fit-content;
-  padding-left: 5px;
+  padding-left: 9px;
+  display: flex;
+  flex-direction: row;
+  align-items: self-start;
+  margin-bottom: 20px;
 }
 
 form.cQuestionComponent.cMain div label {
   color: black;
   font-size: 18px;
-  margin-bottom: 7px;
-  margin-left: 25px;
+  margin: 0;  
+  display: flex;
+  width: 155px;
+  flex-direction: row;
+  font-weight: bold;
+
 }
 form.cQuestionComponent.cMain label {
   color: black;
@@ -62,36 +109,29 @@ form.cQuestionComponent.cMain select {
   background-color: white;
 }
 
+#email.cQuestionComponent.cMain,#phone.cQuestionComponent.cMain:invalid {
+  border: 1px solid rgb(248, 52, 52);
+}
+
 form.cQuestionComponent.cMain input{
   margin-left: 20px;
   width: max-content;
-  border-radius: 3px;
   color: black;
   font-size: 16px;
   border: 1px solid black;
   display: table;
   padding: 4px;
+  height: 32px;
 }
-
-form.cQuestionComponent.cMain p input {
-  margin-left: 20px;
-  width: max-content;
-  color: black;
-  font-size: 16px;
-  border: 1px solid black;
-  display: table;
-  padding: 4px;
-  border-radius: 3px;
-  }
 
 form.cQuestionComponent.cMain textarea {
   display: table;
   color: black;
   font-size: 16px;
-  margin: 20px;
+  margin: 0px 0px 0px 20px;
   width: 450px;
-  height: 200px;;
-
+  height: 200px;
+  border-radius: 5px;
 }
 
 form.cQuestionComponent.cMain div select {
