--- a/final/force-app/main/default/aura/testDrive/testDrive.css
+++ b/final/force-app/main/default/aura/testDrive/testDrive.css
@@ -1,28 +1,38 @@
-.THIS {
-}
-
 form.cTestDrive.cMain {
   align-self: center;
   align-items: center;
-  padding: 100px 150px 100px;
-    
+  padding: 15px 150px 100px;
+  background-image: linear-gradient(to bottom, white, rgb(240, 240, 240));   
 }
 
 h1.cTestDrive.cMain {
   color:black;
   text-align: center;
-  font-size: 36px;
+  font-size: 36px; 
 }
 
 form.cTestDrive.cMain p {
-    width: 100%;
-    padding: 15px 5px 10px;
+  width: 100%;
+  padding: 0px 5px 10px;
+  display: flex;
 }
 
 form.cTestDrive.cMain p label {
   color: black;
   font-size: 18px;
-  margin-left: 25px;
+  margin: 0;  
+  display: flex;
+  width: 165px;
+  flex-direction: row;
+  font-weight: bold;
+}
+
+form.cTestDrive.cMain b,
+  form.cTestDrive.cMain p b {
+  text-decoration: none;
+  font-size: 17px;
+  align-self: flex-end;
+  color: red;
 }
 
 form.cTestDrive.cMain p input[type=text] {
@@ -30,22 +40,33 @@ form.cTestDrive.cMain p input[type=text] {
   width: max-content;
   color: black;
   font-size: 16px;
-  border-radius: 3px;
+  border-radius: 0px;
   border: 1px solid black;
   display: table;
   padding: 4px;
+  width: 250px;
 }
 
 form.cTestDrive.cMain div {
   width: fit-content;
   padding-left: 5px;
+  margin-top: 5px;
+  padding-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: flex-end;
 }
 
 form.cTestDrive.cMain div label {
   color: black;
   font-size: 18px;
   margin-bottom: 7px;
-  margin-left: 25px;
+  width: 165px;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 form.cTestDrive.cMain div select {
@@ -54,12 +75,17 @@ form.cTestDrive.cMain div select {
   font-size: 16px;
   margin-left: 20px;
   border: 1px solid;
+  border-radius: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;;
+  width: 250px;
 }
 
-form.cTestDrive.cMain div div {
+ form.cTestDrive.cMain div div {
   margin: 0px;
   padding: 0px;
-}
+} 
 
 form.cTestDrive.cMain input[type=submit]{
   margin-top: 50px;
