fix bug with same images/find new one)

--- a/final/force-app/main/default/aura/modalForCar/modalForCar.cmp
+++ b/final/force-app/main/default/aura/modalForCar/modalForCar.cmp
@@ -8,7 +8,8 @@
       title="Details"
       onclick="{! c.openModel }"
     />
-    <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" onclick="{!c.openModel}" />
+    <!-- <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" onclick="{!c.openModel}" /> -->
+    <img src="{!$Resource.LadaCenterHome + v.car.Product2.Product_Image_Link__c}" onclick="{!c.openModel}" />
     <aura:if isTrue="{!v.isModalOpen}"> 
       <section
         role="dialog"
@@ -42,7 +43,7 @@
             <p>{!v.car.Product2.Family}</p>
             <p>{!v.car.Product2.Description}</p>
             <p>{!v.car.Product2.Equipment__c}</p>
-            <img src="{!$Resource.LadaCenterHome + '/ladaVesta.jpg'}" />
+            <img src="{!$Resource.LadaCenterHome + v.car.Product2.Product_Image_Link__c}" />
           </div>
           <footer class="slds-modal__footer">
             <lightning:button
