--- a/final/force-app/main/default/aura/home/home.css
+++ b/final/force-app/main/default/aura/home/home.css
@@ -30,7 +30,7 @@ div.cmp-container.cHome.cMain div p {
 }
 div.cmp-container.cHome.cMain div h2 {
   text-align: center;
-  margin: 1em 0 0.5em 0;
+  margin: 0 0 0 0;
   color: #343434;
   font-weight: normal;
   font-size: 30px;
