create flow component

--- a/final/force-app/main/default/aura/main/main.cmp
+++ b/final/force-app/main/default/aura/main/main.cmp
@@ -6,6 +6,7 @@
     action="{!c.handleComponentEvent}"
   />
   <c:header />
+  <!-- <c:flowComponent /> -->
   <aura:renderIf isTrue="{!v.renderedCmp=='home'}">
     <c:home />
   </aura:renderIf>
