--- a/final/force-app/main/default/aura/footer/footer.css
+++ b/final/force-app/main/default/aura/footer/footer.css
@@ -1,22 +1,98 @@
-.THIS {
-  background: black;
-  font-family: "Varela", sans-serif;
-}
-
 div.cFooter.cMain {
-  text-align: center;
-  position:relative;
-  height: 8em;
+  /* text-align: center; */
+  /* position:relative; */
+  height: auto;
 }
 
-div.cFooter.cMain a.refStyle {
-  position: relative;
-  border: none;
-  outline: none;
+div.cFooter.cMain.footer-dark {
+  padding: 50px 0;
+  color: #f0f9ff;
+  background-color: #282d32;
+}
+
+div.cFooter.cMain.footer-dark h3 {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+div.cFooter.cMain.footer-dark ul {
+  padding: 0;
+  list-style: none;
+  line-height: 1.6;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+div.cFooter.cMain.footer-dark ul a {
+  color: inherit;
   text-decoration: none;
-  color: rgb(212, 212, 212);
-  font-size: large;
-  animation: mymove 20s infinite;
+  opacity: 0.6;
+}
+
+div.cFooter.cMain.footer-dark ul a:hover {
+  opacity: 0.8;
+}
+
+@media (max-width:767px) {
+  div.cFooter.cMain.footer-dark .item:not(.social) {
+    text-align: center;
+    padding-bottom: 20px;
+  }
+}
+
+div.cFooter.cMain.footer-dark .item.text {
+  margin-bottom: 36px;
+}
+
+@media (max-width:767px) {
+  div.cFooter.cMain.footer-dark .item.text {
+    margin-bottom: 0;
+  }
+}
+
+div.cFooter.cMain.footer-dark .item.text p {
+  opacity: 0.6;
+  margin-bottom: 0;
+}
+
+div.cFooter.cMain.footer-dark .item.social {
+  text-align: center;
+  top: 20px;
+}
+
+@media (max-width:991px) {
+  div.cFooter.cMain.footer-dark .item.social {
+    text-align: center;
+    margin-top: 20px;
+  }
+}
+
+div.cFooter.cMain.footer-dark .item.social > a {
+  font-size: 20px;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  display: inline-block;
+  text-align: center;
+  /* border-radius: 50%;
+  box-shadow: 0 0 0 1px rgba(255,255,255,0.4); */
+  margin: 0 8px;
+  color: #fff;
+  opacity: 0.75;
+}
+
+div.cFooter.cMain.footer-dark .item.social > a:hover {
+  opacity: 0.9;
+}
+
+div.cFooter.cMain.footer-dark .copyright {
+  text-align: center;
+  padding-top: 24px;
+  opacity: 0.3;
+  font-size: 13px;
+  margin-bottom: 0;
 }
 
 /* div.cFooter.cMain div {
@@ -27,7 +103,7 @@ div.cFooter.cMain a.refStyle {
   animation: mymove 20s infinite;
 } */
 
-@keyframes mymove {
+/* @keyframes mymove {
   0% {left: 0px;}
   25% {left: 30px;}
   50% {right: 60px;}
@@ -35,4 +111,4 @@ div.cFooter.cMain a.refStyle {
   75% {left: 0px;}
   87.5% {right: 30px;}
   100% {left: 0px;}
-}
+} */
